--- a/src/app/views/dashboard/import/Style.css
+++ b/src/app/views/dashboard/import/Style.css
@@ -1,209 +1,238 @@
 .App {
-    font-family: sans-serif;
-    text-align: center;
-    background: skyblue;
+  font-family: sans-serif;
+  text-align: center;
+  background: skyblue;
 }
 h3 {
-    font-weight: 200;
-    text-shadow: 1px 1px 3px gray;
+  font-weight: 200;
+  text-shadow: 1px 1px 3px gray;
 }
 .container {
-    height: 90vh;
-    width: 100%;
-    margin: 0 auto;
-    padding: 10px;
-    display: flex;
-    justify-content: space-evenly;
+  height: 90vh;
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
 }
 .containers {
-    width: 100%;
+  width: 100%;
+}
 
-    display: flex;
-}
-.containers .left {
-    flex-basis: 30%;
-}
-.containers .right {
-    flex-basis: 70%;
-    margin-left: 30px;
-    margin-top: 70px;
-}
 .right {
 }
 .small-box {
-    width: 40%;
-    box-shadow: 3px 3px 50px 2px gray;
+  width: 40%;
+  box-shadow: 3px 3px 50px 2px gray;
 }
 
 .task {
-    border: 1px solid white;
-    margin: 10px;
-    box-shadow: 1px 3px 20px gray;
-    height: 8vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border: 1px solid white;
+  margin: 10px;
+  box-shadow: 1px 3px 20px gray;
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .dragged {
-    background-color: rgba(200, 200, 200, 0.3);
-    opacity: 0.5;
-    cursor: pointer;
+  background-color: rgba(200, 200, 200, 0.3);
+  opacity: 0.5;
+  cursor: pointer;
 }
 .dragged-over {
-    background: rgba(255, 0, 0, 0.2);
-    .task {
-        background: rgba(255, 0, 0, 0.1);
-    }
+  background: rgba(255, 0, 0, 0.2);
+  .task {
+    background: rgba(255, 0, 0, 0.1);
+  }
 }
 
-@import '../../../../../node_modules/@syncfusion/ej2-base/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-inputs/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-buttons/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-lists/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-navigations/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-popups/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-grids/styles/material.css';
-@import '../../../../../node_modules/@syncfusion/ej2-react-spreadsheet/styles/material.css';
+@import "../../../../../node_modules/@syncfusion/ej2-base/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-inputs/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-buttons/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-lists/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-navigations/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-popups/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-dropdowns/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-grids/styles/material.css";
+@import "../../../../../node_modules/@syncfusion/ej2-react-spreadsheet/styles/material.css";
 
 #dropdown {
-    appearance: none;
-    padding: 5px;
-    background-color: #4834d4;
-    color: white;
-    border: none;
-    font-family: inherit;
-    outline: none;
+  appearance: none;
+  padding: 5px;
+  background-color: #4834d4;
+  color: white;
+  border: none;
+  font-family: inherit;
+  outline: none;
 }
 * {
-    font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .draggable-table {
-    position: absolute;
-    top: 25%;
-    left: 20%;
-    width: 60%;
-    height: 50%;
-    border-collapse: collapse;
-    background: white;
-    -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 25%;
+  left: 20%;
+  width: 60%;
+  height: 50%;
+  border-collapse: collapse;
+  background: white;
+  -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.1);
 
-    .draggable-table__drag {
+  .draggable-table__drag {
+    font-size: 0.95em;
+    font-weight: lighter;
+    text-transform: capitalize;
+    position: absolute;
+    width: 100%;
+    text-indent: 50px;
+    border: 1px solid #f1f1f1;
+    z-index: 10;
+    cursor: grabbing;
+    -webkit-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.05);
+
+    opacity: 1;
+  }
+
+  thead {
+    th {
+      height: 25px;
+      font-weight: bold;
+      text-transform: capitalize;
+      padding: 10px;
+      user-select: none;
+    }
+  }
+
+  tbody {
+    tr {
+      cursor: grabbing;
+
+      td {
         font-size: 0.95em;
         font-weight: lighter;
         text-transform: capitalize;
-        position: absolute;
-        width: 100%;
         text-indent: 50px;
-        border: 1px solid #f1f1f1;
-        z-index: 10;
-        cursor: grabbing;
-        -webkit-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.05);
-        box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.05);
-
-        opacity: 1;
+        padding: 10px;
+        user-select: none;
+        border-top: 1px solid whitesmoke;
+      }
     }
 
-    thead {
-        th {
-            height: 25px;
-            font-weight: bold;
-            text-transform: capitalize;
-            padding: 10px;
-            user-select: none;
-        }
+    tr:nth-child(even) {
+      background-color: #f7f7f7;
     }
 
-    tbody {
-        tr {
-            cursor: grabbing;
-
-            td {
-                font-size: 0.95em;
-                font-weight: lighter;
-                text-transform: capitalize;
-                text-indent: 50px;
-                padding: 10px;
-                user-select: none;
-                border-top: 1px solid whitesmoke;
-            }
-        }
-
-        tr:nth-child(even) {
-            background-color: #f7f7f7;
-        }
-
-        tr:nth-child(odd) {
-            background-color: #ffffff;
-        }
-
-        tr.is-dragging {
-            background: #f1c40f;
-
-            td {
-                color: #ffe683;
-            }
-        }
+    tr:nth-child(odd) {
+      background-color: #ffffff;
     }
+
+    tr.is-dragging {
+      background: #f1c40f;
+
+      td {
+        color: #ffe683;
+      }
+    }
+  }
 }
 .love {
-    margin-left: 30px;
-    margin-top: 50px;
-    background-color: #134c7a;
-    padding: 7px;
-    width: 10%;
-    border-radius: 10px;
-    color: white;
+  margin-left: 30px;
+  margin-top: 50px;
+  background-color: #134c7a;
+  padding: 7px;
+  width: 10%;
+  border-radius: 10px;
+  color: white;
 }
 .containers {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
+  margin: auto;
 }
-.container .lefts {
-    flex-basis: 40%;
-}
-.containers .rights {
-    flex-basis: 60%;
-}
-.rights {
-    margin-left: 30px;
-}
-.bottom-scroll-container {
-    width: 100%;
 
-    overflow-x: auto;
-    white-space: nowrap;
-    background-color: #f0f0f0;
+.bottom-scroll-container {
+  width: 100%;
+
+  overflow-x: auto;
+  white-space: nowrap;
+  background-color: #f0f0f0;
 }
 
 .all {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 table,
 th,
 td {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 td {
-    padding: 10px;
+  padding: 10px;
 }
 
 .closing {
-    text-align: center;
+  text-align: center;
 }
 
 .debit,
 .credit {
-    text-align: center;
+  text-align: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  float: right;
+  margin-top: 20px;
+  margin-right: 10px;
+}
+
+.button-container Button {
+  padding: 10px 20px;
+}
+
+.containers {
+  height: 100vh;
+  width: 100%;
+  margin: auto;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+thead th,
+tbody td {
+  text-align: center;
+  padding: 10px;
+}
+
+.bottom-scroll-container {
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  background-color: #f0f0f0;
+}
+
+.all {
+  margin-top: 20px;
+}
+
+.closing,
+.debit,
+.credit {
+  text-align: center;
 }
